[project]
name = "fasthx"
version = "3.0.1"
description = "FastAPI server-side rendering with built-in HTMX support."
authors = [{ name = "Peter Volf", email = "do.volfp@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
dependencies = ["fastapi>=0.100.0"]

[project.optional-dependencies]
htmy = ["htmy[lxml]>=0.8.1"]
jinja = ["jinja2>=3.0.0,<4"]

[dependency-groups]
dev = [
    "htmy[lxml]>=0.8.1",
    "httpx>=0.26.0,<0.27",
    "jinja2>=3.0.0,<4",
    "mkdocs-material>=9.6.15,<10",
    "mkdocstrings[python]>=0.30.0,<0.31",
    "mypy>=1.17.0,<2",
    "poethepoet>=0.36.0,<0.37",
    "pytest>=8.4.1,<9",
    "pytest-random-order>=1.2.0,<2",
    "ruff>=0.12.4,<0.13",
    "typing-extensions>=4.5.0",
    "uvicorn>=0.35.0,<0.36",
]

[tool.mypy]
strict = true
show_error_codes = true

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "--random-order"

[tool.ruff]
line-length = 108
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "dist",
    "docs",
]
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "S", # flake8-bandit - we must ignore these rules in tests
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"] # S101: use of assert detected

[tool.poe.tasks]
format = "ruff format --check ."
format-fix = "ruff format ."

lint = "ruff check ."
lint-fix = "ruff . --fix"

mypy = "mypy ."

check.sequence = ["format", "lint", "mypy"]
check.ignore_fail = "return_non_zero"

test = "python -m pytest tests"

serve-docs = "mkdocs serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
