[project]
name = "fasthx"
dynamic = ["version"]
description = "FastAPI server-side rendering with built-in HTMX support."
authors = [{ name = "Peter Volf", email = "do.volfp@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.135.0"]

[project.optional-dependencies]
htmy = ["htmy[lxml]>=0.12.1"]
jinja = ["jinja2>=3.0.0,<4"]
all = ["fasthx[htmy,jinja]"]

[dependency-groups]
dev = [
    "htmy[all]>=0.12.1",
    "httpx>=0.26.0",
    "jinja2>=3.0.0,<4",
    "mkdocstrings[python]>=1.0.4",
    "mypy>=2.1.0",
    "poethepoet>=0.46.0",
    "pytest>=9.0.2",
    "pytest-random-order>=1.2.0",
    "ruff>=0.15.17,<0.16",
    "typing-extensions>=4.12.0",
    "uvicorn>=0.50.0",
    "zensical>=0.0.45",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.mypy]
strict = true
show_error_codes = true

[tool.pdm.build]
excludes = ["tests/", "examples/"]

[tool.pdm.version]
source = "file"
path = "fasthx/__init__.py"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "--random-order"

[tool.ruff]
line-length = 108
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "dist",
    "docs",
]
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "S", # flake8-bandit - we must ignore these rules in tests
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"] # S101: use of assert detected

[tool.poe.tasks]
format = "ruff format --check ."
format-fix = "ruff format ."

lint = "ruff check ."
lint-fix = "ruff . --fix"

mypy = "mypy ."

check.sequence = ["format", "lint", "mypy"]
check.ignore_fail = "return_non_zero"

test = "python -m pytest tests"

serve-docs = "zensical serve"
